--- a/AvansAstrandTest/Specialist_WPF/MainWindow.xaml
+++ b/AvansAstrandTest/Specialist_WPF/MainWindow.xaml
@@ -6,7 +6,13 @@
         xmlns:local="clr-namespace:Specialist_WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+    <Grid Margin="0,0,336.453,312.226">
+        <Label Content="Patient: " HorizontalAlignment="Left" FontSize="14" Margin="35,26,0,0" VerticalAlignment="Top"/>
+        <ComboBox HorizontalAlignment="Left" x:Name="NameComboBox" Margin="100,26,0,0" VerticalAlignment="Top" Width="120" FontSize="14"/>
+        <Label Content="Sessions:" HorizontalAlignment="Left" Margin="234,26,0,0" VerticalAlignment="Top" FontSize="14"/>
+        <ComboBox HorizontalAlignment="Left" Margin="304,26,0,0" VerticalAlignment="Top" Width="120" FontSize="14" x:Name="SessionComboBox"/>
+        <Button Content="Laad Sessie" HorizontalAlignment="Left" Margin="234,60,0,0" VerticalAlignment="Top" Width="190" x:Name="LoadSessionButton" FontSize="14"/>
+        <Button Content="Vernieuw alle sessie's" HorizontalAlignment="Left" Margin="35,60,0,0" VerticalAlignment="Top" Width="185" Height="23" FontSize="14" x:Name="ReloadSessionsButton"/>
+
     </Grid>
 </Window>
