--- a/AvansAstrandTest/Specialist_WPF/SessionWindow.xaml
+++ b/AvansAstrandTest/Specialist_WPF/SessionWindow.xaml
@@ -6,14 +6,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Specialist_WPF"
         mc:Ignorable="d"
-        Title="SessionWindow" Height="450" Width="800">
-    <Grid>
+        Title="SessionWindow" Height="1080" Width="1920">
+    <Grid Margin="0,0,-509.547,0.226">
         <Label Content="NameLabel" x:Name="NameLabel" HorizontalAlignment="Left" Margin="24,5,0,0" VerticalAlignment="Top"/>
         <Label Content="AgeLabel" x:Name="AgeLabel" HorizontalAlignment="Left" Margin="24,34,0,0" VerticalAlignment="Top"/>
         <Label Content="GenderLabel" x:Name="GenderLabel" HorizontalAlignment="Left" Margin="162,34,0,0" VerticalAlignment="Top"/>
         <Label Content="WeightLabel" x:Name="WeightLabel" HorizontalAlignment="Left" Margin="298,34,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.228,1.013"/>
         <Label Content="VO2Label" x:Name="VO2Label" HorizontalAlignment="Left" Margin="274,386,0,0" VerticalAlignment="Top"/>
         <Label Content="SteadyStateLabel" x:Name="SteadyStateLabel" HorizontalAlignment="Left" Margin="440,386,0,0" VerticalAlignment="Top"/>
-        <lvc:CartesianChart Margin="10,76,10.453,34.226" x:Name="Chart"></lvc:CartesianChart>
+        <lvc:CartesianChart Margin="10,76,540.264,33.642" x:Name="Chart"></lvc:CartesianChart>
     </Grid>
 </Window>
